# AtomicTestHarnesses

./: .gitignore  AtomicTestHarnesses.psd1  AtomicTestHarnesses.psm1  LICENSE  Readme.md
.github/workflows/: deploy-posixath.yml  deploy-powershell.yml
TestHarnesses/T1003.001_DumpLSASS/: DumpLSASS.Tests.ps1  DumpLSASS.ps1
TestHarnesses/T1055.002_PortableExecutableInjection/: InvokeThread.Tests.ps1  InvokeThread.ps1
TestHarnesses/T1055_ProcessInjection/: ProcessHerpderp.Tests.ps1  ProcessHerpderp.ps1
TestHarnesses/T1059.001_PowerShell/: OutPowerShellCommandLineParameter.Tests.ps1  OutPowerShellCommandLineParameter.ps1
TestHarnesses/T1078.003_ValidAccounts/: LogonUser.Tests.ps1
TestHarnesses/T1127.001_MSBuild/: InvokeMSBuild.Tests.ps1  InvokeMSBuild.ps1
TestHarnesses/T1134.001_TokenImpersonation/: TokenImpersonation.Tests.ps1  TokenImpersonation.ps1
TestHarnesses/T1134.004_ParentPIDSpoofing/: PPIDSpoof.Tests.ps1  PPIDSpoof.ps1
TestHarnesses/T1218.001_CompiledHTMLFile/: InvokeCompiledHTMLFile.Tests.ps1  InvokeCompiledHTMLFile.ps1
TestHarnesses/T1218.005_Mshta/: InvokeHTMLApplication.Tests.ps1  (+1 more)
Tests/: Module.Tests.ps1
posix/: Pipfile  README.md  mkdocs.yml  pyproject.toml
posix/docs/: index.md
posix/docs/linux/: t1018.md  t1055_008.md  t1548_001.md
posix/docs/macos/: t1059_002.md  t1059_007.md  t1620.md
posix/src/posixath/: __init__.py  __main__.py  pytest.ini
posix/src/posixath/tests/: conftest.py
posix/src/posixath/tests/linux/: test_T1018.py  test_T1055_008.py  test_T1548_001.py
posix/src/posixath/tests/macos/: test_T1059_002.py  test_T1059_007.py  test_T1620.py
posix/src/posixath/utils/: common.py  hexdump.py  ptrace.py
posix/src/posixath/utils/tests/: test_common.py
(+36 files in other folders)
